--- a/Day_9-11/main.html
+++ b/Day_9-11/main.html
@@ -76,7 +76,7 @@
 							<div class="blank_letter">
 								<div class="blank_phone_title">Fluid Typography</div>
 								<div class="blank_phone_content">On different screen sizes, fonts automagically<br>scale with the viewport</div>
-							</div>
+							</div><!---blank_letter结束-->
 							</div>
 						</td>
 						<td><div>
@@ -94,5 +94,213 @@
 		</div><!---blank_content结束---->
 	</div><!---blank结束-->
 	
+	<div class="tree">
+		<div class="tree_info">
+			<div class="tree_title">
+				Supportive policies<br>for China's smart<br>car
+			</div><!---tree_title结束---->
+
+			<div class="tree_content">
+					China will come up with its own smart car<br>standards, traffic rules, laws and regulations<br>relating to safety, according to the China<br>Industry Innovation Alliance for the Intelli-<br>
+					bent and Connected Vehicles.
+			</div><!---tree-content结束---->
+			<div class="tree_button">	
+				<button class="btn_check">CHECK OUT FEATURES</button>
+				<button class="btn_try">TRY PRODUCT FOR FREE</button>
+			</div><!--tree_button结束--->
+		</div><!---tree-info结束--->
+
+		<div class="ipad">
+			<div class="ipad_box">
+				<div class="ipad_home">
+					
+				</div><!---ipad_home结束---->
+				<div class="ipad_screen">
+					<img src="./images/Screen.png"/>
+				</div><!----ipad_screen结束---->
+			</div><!----ipad_box结束---->
+		</div><!---ipad结束---->
+	</div><!----tree结束--->
+
+	<div class="essay">
+		<div class="essay_title">
+			Try Our Awesome Products
+		</div><!--essay_title结束------->
+		<div class="essay_content">
+			<table>
+				<tr class="line_1">
+					<td>
+						<img src="./images/Singleton.png" />
+					</td>
+
+					<td>
+						<img src="./images/Hero.png" />
+					</td>
+
+					<td>
+						<img src="./images/Portland.png">
+					</td>
+
+				</tr>
+
+				<tr class="line_2">
+					<td>
+						<div>
+							Li Jun, a China Academy of Engi-<br>
+							neering academician and also <br>director of the alliances's experts'<br> committee, said that China will<br> also launch design guidance for smart cars, smart map architec-<br>ture and standards for test<br> grounds.
+						</div>
+					</td>
+
+					<td>
+						<div>
+							Li said the smart car industry is<br>able to enlarge the current car<br>industry by 1 trillion yuan($158.15 <br> billion) and also able to boost fast<br> development in 5G, internet of car, big data, artificial intelligence<br> and new-energy vehicles.
+						</div>
+					</td>
+
+					<td>
+						<div>
+							Zhang Junyi, a partner with NIO<br> Capital, said that the smart car is<br> the trend for the car industry and China's auto sector will usher in a<br> new key development stage with the improvement of infrastructure,<br> technology, policies and laws.
+						</div>
+					</td>
+				</tr>
+			</table>
+		</div><!----essay_content结束---->
+
+	</div><!---essay结束---->
+
+	<div class="image-text">
+		<div class="leaf">
+			<img src="./images/content-tree.png" />
+			<div class="leaf_content">
+				<h3>Learn How to improve Your <br>Personal Business</h3>
+				<p>Li Jun, a China Academy of Engineering academician and also director of the alliances's experts' committee, said that China will also launch design guidance for smart cars, smart map architec-ture and standards for test grounds.
+				</p>
+			</div>
+		</div><!---leaf结束---->
+
+		<div class="bird">
+			<div class="bird_content">
+				<h3>Choose Between Two Beatufully Designed Color Schemes</h3>
+				<p>China will come up with its own smart car standards, traffic rules, laws and regulations relating to safety, according to the China Industry Innovation Alliance for the Intelligent and Connected Vehicles.</p>
+			</div>	
+			<img src="./images/content-bird.png"/>
+		</div><!------bird结束------->
+	</div><!---image-text结束----->
+
+	<div class="our_crew">
+		<div class="our_crew_content">
+			<h1>Our Awesome Crew</h1>
+		<p>Our unique online teaching style makes learning easy for everyone. Whether you<br>are trying to land a new job, brush up on your skills.</p>
+		
+		<table>
+			<tr>
+				<td>
+					<a class="pic1" href="#"><img src="./images/Userpic_1.png" /></a>
+				</td>
+				<td>
+					<img src="./images/Userpic 2.png" />
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<img src="./images/Userpic 3.png" />
+				</td>
+				<td>
+					<img src="./images/Userpic 4.png" />
+				</td>
+			</tr>
+		</table>
+	</div> <!---our_crew_content结束--->
+	</div><!-----our_crew结束------>
+
+	<div class="contact">
+		<div class="contact_box">
+			<div class="contact_left">
+				<div>FELL FREE TO WRITE US</div>
+				<input class="E-mail" type="text" name="E-mail" placeholder=" E-mail">
+				<input class="Subject" type="text" name="Subject" placeholder=" Subject">
+
+				<input type="text" name="message" class="Message">
+
+				<button class="Submit">Submit</button>
+
+			</div><!--contact_left结束--->
+
+			<div class="contact_info">
+				<h1>Contacts</h1>
+				<p>Make any design your own using the Style Editor. Personalize font, color, and layouts to create the custom look you want.</p>
+				<div class="several_info">
+					<table>
+						<tr>
+							<td>
+								<img src="./images/Map Icon.png" />
+							</td>
+							<td>
+								<p>360 King Street<br>Feastrvale Trevose, PA 19057</p>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<img src="./images/Phone Icon.png" />
+							</td>
+							<td>
+								<p>(755)564-84-12</p>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<img src="./images/Mail Icon.png" />
+							</td>
+							<td>
+								<p>youname@mail.com</p>
+							</td>
+						</tr>
+					</table>
+					
+				</div><!--several_info结束---->
+			</div><!----contact_info结束----->
+		</div> <!----contact_box--->
+	</div><!--contact结束--->
+	<div class="footer">
+		<div class="footer_content">
+			
+		<ul>
+			<li>LEARN MORE
+				<ul>
+					<li><a href="#">How it works?</a></li>
+					<li><a href="#">Meeting tools</a></li>
+					<li><a href="#">Live streaming</a></li>
+					<li><a href="#">Contact method</a></li>
+				</ul>
+			</li>
+			<li>ABOUT US
+				<ul>
+					<li><a href="#">About us</a></li>
+					<li><a href="#">Features</a></li>
+					<li><a href="#">Privacy police</a></li>
+					<li><a href="#">Terms & Conditions</a></li>
+				</ul>
+			</li>
+
+			<li>SUPPORT
+				<ul>
+					<li><a href="#">FAQ</a></li>
+					<li><a href="#">Contacts</a></li>
+					<li><a href="#">Live chat</a></li>
+					<li><a href="#">Phone call</a></li>
+				</ul>
+			</li>
+			<li>ENJOY YOUR LIFE
+				<ul>
+					<li><a href="#">Create web UI kit for designers</a></li>
+					<li><a href="#">freelancers or business</a></li>
+					<li><img src="./images/icons_03.png"></li>
+				</ul>
+			</li>
+		</ul>
+
+		</div><!----footer_content结束--->
+	</div><!---footer结束--->
+
 </body>
 </html>
