update the Day 22-24 homework

--- a/AllRoad.html
+++ b/AllRoad.html
@@ -45,6 +45,25 @@
 				<a href="https://github.com/lynette1256/BaiDu_FrontEnd_HomeWork/tree/master/Day_20-21">查看</a>
 			</td>
 		</tr>
+		<tr>
+			<td>Day_22-24</td>
+			<td>JS里面的居民们</td>
+			<td>
+				<a href="http://htmlpreview.github.io/?https://github.com/lynette1256/BaiDu_FrontEnd_HomeWork/blob/master/Day_22-24/numberExercise.html">数字练习</a>
+				<a href="http://htmlpreview.github.io/?https://github.com/lynette1256/BaiDu_FrontEnd_HomeWork/blob/master/Day_22-24/stringExercise.html">字符串练习</a>
+				<a href="http://htmlpreview.github.io/?https://github.com/lynette1256/BaiDu_FrontEnd_HomeWork/blob/master/Day_22-24/stringExercise2.html">字符串练习2</a>
+				<a href="http://htmlpreview.github.io/?https://github.com/lynette1256/BaiDu_FrontEnd_HomeWork/blob/master/Day_22-24/objectExercise.html">对象练习</a>
+				<a href="http://htmlpreview.github.io/?https://github.com/lynette1256/BaiDu_FrontEnd_HomeWork/blob/master/Day_22-24/arrayExercise.html">数组练习</a>
+				<a href="http://htmlpreview.github.io/?https://github.com/lynette1256/BaiDu_FrontEnd_HomeWork/blob/master/Day_22-24/arrayExercise2.html">数组练习2</a>
+				<a href="http://htmlpreview.github.io/?https://github.com/lynette1256/BaiDu_FrontEnd_HomeWork/blob/master/Day_22-24/stackExercise.html">栈练习</a>
+				<a href="http://htmlpreview.github.io/?https://github.com/lynette1256/BaiDu_FrontEnd_HomeWork/blob/master/Day_22-24/stackExercise2.html">栈练习2</a>
+				<a href="http://htmlpreview.github.io/?https://github.com/lynette1256/BaiDu_FrontEnd_HomeWork/blob/master/Day_22-24/sortExercise.html">排序练习</a>
+				<a href="http://htmlpreview.github.io/?https://github.com/lynette1256/BaiDu_FrontEnd_HomeWork/blob/master/Day_22-24/exchange.html">数据结构转换练习</a>
+			</td>
+			<td>
+				<a href="https://github.com/lynette1256/BaiDu_FrontEnd_HomeWork/tree/master/Day_22-24">查看</a>
+			</td>
+		</tr>
 	</table>
 </body>
 </html>
